--- a/bitrise.yml
+++ b/bitrise.yml
@@ -37,7 +37,7 @@ workflows:
             test-01
             test-02
             test-03
-        - access_token: "$personal_access"
+        - access_token: "ACCESS_TOKEN"
     description: Trigger PR jobs/flows
   primary:
     steps:
