--- a/bitrise.yml
+++ b/bitrise.yml
@@ -35,8 +35,8 @@ workflows:
         inputs:
         - workflows: |-
             test-01
-#            test-02
-#            test-03
+            test-02
+            test-03
         - access_token: "ACCESS_TOKEN"
     description: Trigger PR jobs/flows
   primary:
@@ -87,11 +87,11 @@ workflows:
     description: Run Gradle LintDebug
   test-01:
     steps:
-#      - github-status@2:
-#          inputs:
-#            - status_identifier: Test-01
-#            - set_specific_status: pending
-#            - auth_token: $GITHUB_TOKEN
+      - github-status@2:
+          inputs:
+            - status_identifier: Test-01
+            - set_specific_status: pending
+            - auth_token: $GITHUB_TOKEN
       - script@1:
           inputs:
             - content: |-
@@ -99,10 +99,10 @@ workflows:
                 set -e
                 set -x
                 echo "Test 01"
-#      - github-status@2:
-#          inputs:
-#            - status_identifier: Test-01
-#            - auth_token: $GITHUB_TOKEN
+      - github-status@2:
+          inputs:
+            - status_identifier: Test-01
+            - auth_token: $GITHUB_TOKEN
   test-02:
     steps:
       - github-status@2:
