--- a/bitrise.yml
+++ b/bitrise.yml
@@ -35,7 +35,7 @@ workflows:
             test-01
             test-02
             test-03
-        - access_token: "ACCESS_TOKEN"
+        - access_token: "$ACCESS_TOKEN"
     description: Trigger PR jobs/flows
   primary:
     steps:
