--- a/.github/workflows/bitrise-pr-comment.yml
+++ b/.github/workflows/bitrise-pr-comment.yml
@@ -1,13 +1,13 @@
 name: Bitrise-PR-comment
 
-on:
-  pull_request_review_comment:
-    types: [created]
-
+on: issue_comment
 jobs:  
-  pr_comment:
+  pr_commented:
+    # This job only runs for pull request comments
+    name: PR comment
+    if: ${{ github.event.issue.pull_request }}
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo ${{ github.event }}
+          echo "Comment on PR #${{ github.event.issue }}"
     
