--- a/.github/workflows/bitrise-pr-comment.yml
+++ b/.github/workflows/bitrise-pr-comment.yml
@@ -11,4 +11,7 @@ jobs:
       - run: |
           echo "Comment on PR #${{ github.event.issue.number }}"
           echo "Comment on PR #${{ github.event.issue.pull_request }}"
+          echo "Comment on PR #${{ github.event.issue.pull_request.comments }}"
+          echo "Comment on PR #${{ github.event.issue.pull_request.review_comments }}"
+          echo "Comment on PR #${{ github.event.issue.pull_request.html }}"
     
