--- a/.github/workflows/bitrise-pr-comment.yml
+++ b/.github/workflows/bitrise-pr-comment.yml
@@ -15,10 +15,6 @@ jobs:
           echo "Comment on PR #${{ github.event.issue.pull_request.review_comments }}"
           echo "Comment on PR #${{ github.event.issue.pull_request.html }}"
           echo "extra #${{ github.event_name }}"
-          echo "extra #${{ github.event.ref }}"
-          echo "extra #${{ github.event.description }}"
-          echo "extra #${{ github }}"
-          echo "extra #${{ github.event_name }}"
-          echo "extra #${{ github.issue }}"
-          echo "extra #${{ github.issue.title }}"
+          echo "extra #${{ github.event.issue.name }}"
+          echo "extra #${{ github.event.issue.comment }}"
     
