--- a/.github/workflows/bitrise-pr-comment.yml
+++ b/.github/workflows/bitrise-pr-comment.yml
@@ -15,6 +15,6 @@ jobs:
           echo "Comment on PR #${{ github.event.issue.pull_request.review_comments }}"
           echo "Comment on PR #${{ github.event.issue.pull_request.html }}"
           echo "extra #${{ github.event_name }}"
-          echo "extra #${{ github.event.issue.name }}"
-          echo "extra #${{ github.event.issue.comment }}"
+          echo "extra #${{ github.event.issue.title }}"
+          echo "extra #${{ github.event.comment.body }}"
     
