--- a/.github/workflows/bitrise-pr-comment.yml
+++ b/.github/workflows/bitrise-pr-comment.yml
@@ -15,9 +15,9 @@ jobs:
           echo "Event ${{ github.event_name }}"
           echo "Comment ${{ github.event.comment.body }}"
           echo "Branch ${{ github.head_ref }}"    
-          echo "Branch ${GIT_BRANCH}"
-          echo "Branch ${GITHUB_HEAD_REF}"
-          echo "Branch ${BRANCH_NAME}"
+          echo "GITHUB_SHA ${GITHUB_SHA}"
+          echo "GITHUB_REF ${GITHUB_REF}"
+          echo "GITHUB_HEAD_REF ${GITHUB_HEAD_REF}"
           
           
           # APP_SLUG=${{ secrets.BITRISE_APP_SLUG }}
