--- a/.github/workflows/bitrise-pr-comment.yml
+++ b/.github/workflows/bitrise-pr-comment.yml
@@ -14,7 +14,7 @@ jobs:
           echo "PR Title ${{ github.event.issue.title }}"
           echo "Event ${{ github.event_name }}"
           echo "Comment ${{ github.event.comment.body }}"
-          echo "Branch ${{ github.head_ref }}"    
+          echo "Branch ${{ github.event.pull_request.head.ref }}"    
           echo "GITHUB_SHA ${GITHUB_SHA}"
           echo "GITHUB_REF ${GITHUB_REF}"
           echo "GITHUB_HEAD_REF ${GITHUB_HEAD_REF}"
