--- a/.github/workflows/bitrise-pr-comment.yml
+++ b/.github/workflows/bitrise-pr-comment.yml
@@ -1,24 +1,28 @@
 name: Bitrise-PR-comment
 
 on: issue_comment
-jobs:  
+jobs:
   pr_commented:
     # This job only runs for pull request comments
     if: github.event_name == 'issue_comment'
-    runs-on: ubuntu-latest  
+    runs-on: ubuntu-latest
     steps:
-      - name: GitHub API Request
-        if: steps.check.outputs.triggered == 'true'
+      - name: Github API Request
         id: request
-        uses: octokit/request-action@v2.0.0
+        uses: octokit/request-action@v2.0.2
         with:
           route: ${{ github.event.issue.pull_request.url }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
+      - name: Get PR informations
+        id: pr_data
+        run: |
+          echo "::set-output name=branch::${{ fromJson(steps.request.outputs.data).head.ref }}"
+          echo "::set-output name=repo_name::${{ fromJson(steps.request.outputs.data).head.repo.full_name }}"
+          echo "::set-output name=repo_clone_url::${{ fromJson(steps.request.outputs.data).head.repo.clone_url }}"
+          echo "::set-output name=repo_ssh_url::${{ fromJson(steps.request.outputs.data).head.repo.ssh_url }}"
       - name: PR comment
         run: |
-          echo "branch ${{ fromJson(steps.request.outputs.data).head.ref }}"
           echo "PR number ${{ github.event.issue.number }}"
           echo "PR Title ${{ github.event.issue.title }}"
           echo "Event ${{ github.event_name }}"
@@ -27,7 +31,7 @@ jobs:
           echo "GITHUB_SHA ${GITHUB_SHA}"
           echo "GITHUB_REF ${GITHUB_REF}"
           echo "GITHUB_HEAD_REF ${GITHUB_HEAD_REF}"
-          echo $(echo $PR_COMMENT | cut -d "[" -f2 | cut -d "]" -f1)
+          echo "branch ${{ steps.pr_data.outputs.branch }}"
 
 
           # APP_SLUG=${{ secrets.BITRISE_APP_SLUG }}
