--- a/.github/workflows/bitrise-pr-comment.yml
+++ b/.github/workflows/bitrise-pr-comment.yml
@@ -17,10 +17,7 @@ jobs:
       - name: Get PR informations
         id: pr_data
         run: |
-          # echo "::set-output name=branch::${{ fromJson(steps.request.outputs.data).head.ref }}"
-          echo "::set-output name=repo_name::${{ fromJson(steps.request.outputs.data).head.repo.full_name }}"
-          echo "::set-output name=repo_clone_url::${{ fromJson(steps.request.outputs.data).head.repo.clone_url }}"
-          echo "::set-output name=repo_ssh_url::${{ fromJson(steps.request.outputs.data).head.repo.ssh_url }}"
+          echo "::set-output name=branch::${{ fromJson(steps.request.outputs.data).head.ref }}"
       - name: PR comment
         run: |
           echo "PR number ${{ github.event.issue.number }}"
