--- a/.github/workflows/bitrise-pr-comment.yml
+++ b/.github/workflows/bitrise-pr-comment.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           COMMENT="${{ github.event.comment.body }}"
           
-          WORKFLOW = ""
+          WORKFLOW=""
           if [ "$COMMENT" = "run tests" ]; then
             WORKFLOW="pr-jobs" 
           elif [ "$COMMENT" = "make app" ]; then
@@ -38,7 +38,7 @@ jobs:
           fi
           
           
-          BRANCH=${{ steps.pr_data.outputs.branch }}"
+          BRANCH="${{ steps.pr_data.outputs.branch }}"
           APP_SLUG=${{ secrets.BITRISE_APP_SLUG }}
           BUILD_TRIGGER_TOKEN=${{ secrets.BITRISE_BUILD_TRIGGER_TOKEN }}
           curl https://app.bitrise.io/app/$APP_SLUG/build/start.json --data '{"hook_info":{"type":"bitrise","build_trigger_token":"'${BUILD_TRIGGER_TOKEN}'"}, "build_params":{"branch":"'${BRANCH}'","workflow_id":"'${WORKFLOW}'"},"triggered_by":"curl"}'
