--- a/.github/workflows/bitrise-pr-comment.yml
+++ b/.github/workflows/bitrise-pr-comment.yml
@@ -22,6 +22,9 @@ jobs:
         run: |
           COMMENT="${{ github.event.comment.body }}"
           
+          echo "GITHUB_SHA ${GITHUB_SHA}"
+          echo "PR number ${{ github.event.issue.number }}"
+          
           WORKFLOW=""
           if [ "$COMMENT" = "run tests" ]; then
             WORKFLOW="pr-jobs" 
@@ -38,7 +41,7 @@ jobs:
           fi
           
           
-          BRANCH="${{ steps.pr_data.outputs.branch }}"
-          APP_SLUG=${{ secrets.BITRISE_APP_SLUG }}
-          BUILD_TRIGGER_TOKEN=${{ secrets.BITRISE_BUILD_TRIGGER_TOKEN }}
-          curl https://app.bitrise.io/app/$APP_SLUG/build/start.json --data '{"hook_info":{"type":"bitrise","build_trigger_token":"'${BUILD_TRIGGER_TOKEN}'"}, "build_params":{"branch":"'${BRANCH}'","workflow_id":"'${WORKFLOW}'"},"triggered_by":"curl"}'
+          #BRANCH="${{ steps.pr_data.outputs.branch }}"
+          #APP_SLUG=${{ secrets.BITRISE_APP_SLUG }}
+          #BUILD_TRIGGER_TOKEN=${{ secrets.BITRISE_BUILD_TRIGGER_TOKEN }}
+          #curl https://app.bitrise.io/app/$APP_SLUG/build/start.json --data '{"hook_info":{"type":"bitrise","build_trigger_token":"'${BUILD_TRIGGER_TOKEN}'"}, "build_params":{"branch":"'${BRANCH}'","workflow_id":"'${WORKFLOW}'"},"triggered_by":"curl"}'
