--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -5,6 +5,7 @@ name: Welcome-PR
 # Controls when the workflow will run
 on: 
   pull_request:
+    types: [opened]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
