--- a/.github/workflows/bitrise-pr-comment.yml
+++ b/.github/workflows/bitrise-pr-comment.yml
@@ -7,18 +7,26 @@ jobs:
     if: github.event_name == 'issue_comment'
     runs-on: ubuntu-latest
     steps:
-      - name: Github API Request
-        id: request
-        uses: octokit/request-action@v2.0.2
-        with:
-          route: ${{ github.event.issue.pull_request.url }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#       - name: Github API Request
+#         id: request
+#         uses: octokit/request-action@v2.0.2
+#         with:
+#           route: ${{ github.event.issue.pull_request.url }}
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Curl Github API Request
+        id: curl_response
+        run: |  
+          curl_request
+          # PR_URL=${{ github.event.issue.pull_request.url }}
+          curl -H "Accept: application/vnd.github.v3+json" \
+            ${{ github.event.issue.pull_request.url }} | jq '.head.ref'
       - name: Get PR informations
         id: pr_data
         run: |
-          echo "::set-output name=branch::${{ fromJson(steps.request.outputs.data).head.ref }}"
-          echo "::set-output name=sha::${{ fromJson(steps.request.outputs.data).head.sha }}"
+          echo "::set-output name=branch::${{ fromJson(steps.curl_response.data).head.ref }}"
+          echo "::set-output name=sha::${{ fromJson(steps.curl_response.data).head.sha }}"
       - name: PR comment
         run: |
           COMMENT="${{ github.event.comment.body }}"
@@ -32,13 +40,19 @@ jobs:
             WORKFLOW="unit-test"
           fi
           
+          # for tests
+          BRANCH="${{ steps.pr_data.outputs.branch }}"
+          HASH="${{ steps.pr_data.outputs.sha }}"
+          echo "${BRANCH} ${HASH}"
+            
           # skip curl if workflow didn't match
           if [ "$WORKFLOW" != "" ]; then
             BRANCH="${{ steps.pr_data.outputs.branch }}"
             HASH="${{ steps.pr_data.outputs.sha }}"
             APP_SLUG=${{ secrets.BITRISE_APP_SLUG }}
             BUILD_TRIGGER_TOKEN=${{ secrets.BITRISE_BUILD_TRIGGER_TOKEN }}
-            curl https://app.bitrise.io/app/$APP_SLUG/build/start.json --data '{"hook_info":{"type":"bitrise","build_trigger_token":"'${BUILD_TRIGGER_TOKEN}'"}, "build_params":{"branch":"'${BRANCH}'","workflow_id":"'${WORKFLOW}'","commit_hash":"'${HASH}'"},"triggered_by":"curl"}'
+            echo "${BRANCH} ${HASH}"
+            # curl https://app.bitrise.io/app/$APP_SLUG/build/start.json --data '{"hook_info":{"type":"bitrise","build_trigger_token":"'${BUILD_TRIGGER_TOKEN}'"}, "build_params":{"branch":"'${BRANCH}'","workflow_id":"'${WORKFLOW}'","commit_hash":"'${HASH}'"},"triggered_by":"curl"}'
           else
             echo "Workflow not found"
           fi
