--- a/.github/workflows/bitrise-pr-comment.yml
+++ b/.github/workflows/bitrise-pr-comment.yml
@@ -15,8 +15,9 @@ jobs:
 #           echo "::set-output name=json::${{ fromJson(pr_json) }}"
       - uses: actions/github-script@v3
         with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            const pr_url = ${{ github.event.issue.pull_request.url }}
+            const pr_url = context.payload.pull_request.diff_url
             const result = await github.request(pr_url)
             console.log(result)
 
