--- a/.github/workflows/bitrise-pr-comment.yml
+++ b/.github/workflows/bitrise-pr-comment.yml
@@ -17,10 +17,11 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            const head_ref = context.payload.pull_request.head.ref
-            const head_sha = context.payload.pull_request.head.sha
-            console.log(head_ref)
-            console.log(head_sha)
+            // const head_ref = context.payload.pull_request.head.ref
+            // const head_sha = context.payload.pull_request.head.sha
+            // console.log(head_ref)
+            // console.log(head_sha)
+            console.log(github)
 
 #       - name: Get PR informations
 #         id: pr_data
